@startuml
'https://plantuml.com/class-diagram



class Usuario

class RecordatorioMailer

class Notificador

class Calendario

class Ubicacion

abstract class Evento

class EventoUnico

class EventoRepetitivo

abstract class TipoRepeticion

class Anual

class Diaria

class Mensual

class Semanal

class RepositorioRecordatorios

abstract class Recordatorio

Anual -u-|> TipoRepeticion
Diaria -u-|> TipoRepeticion
Mensual -u-|> TipoRepeticion
Semanal -u-|> TipoRepeticion

EventoRepetitivo -u-|> Evento
EventoRepetitivo-l->TipoRepeticion


EventoUnico -u-|> Evento


interface SheMailLib
SheMailLib.->RecordatorioMailer

Recordatorio->Evento
Recordatorio->Usuario

Notificador-u-|>Recordatorio
Mailer-u-|>Recordatorio

Usuario->"*"Calendario
Calendario->"*"Evento
Evento->Ubicacion

Usuario"*"-l->Recordatorio
RepositorioRecordatorios"*"-u->Recordatorio
@enduml